<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:layout_marginBottom="5dp"
                android:text="@string/nutrition_guidelines"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            android:background="@color/black"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/nutrition_pic"
                android:src="@drawable/nutrition" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:padding="2dp"
                android:layout_margin="5dp"
                android:text="@string/guidelineMoto"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardBackgroundColor="@color/yellow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:padding="2dp"
                android:layout_margin="3dp"
                android:text="@string/guideline1"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardBackgroundColor="@color/yellow">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:padding="2dp"
                android:layout_margin="3dp"
                android:text="@string/guideline2"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardBackgroundColor="@color/yellow">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:padding="2dp"
                android:layout_margin="3dp"
                android:text="@string/guideline3"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@color/yellow">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:padding="2dp"
                    android:layout_margin="3dp"
                    android:text="@string/guideline3_1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="4dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardBackgroundColor="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/purple"
                        android:padding="2dp"
                        android:layout_margin="3dp"
                        android:text="@string/guideline3_2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="4dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardBackgroundColor="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/purple"
                        android:padding="2dp"
                        android:layout_margin="3dp"
                        android:text="@string/guideline3_3"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>